# v1-playbase-core

./: .env  .env.example  .gitignore  Cargo.toml  README.md
modules/coordination_module/: Cargo.toml
modules/coordination_module/fingerPrint/: Cargo.toml
modules/coordination_module/fingerPrint/runner/: fingerprint_runner.rs
modules/coordination_module/fingerPrint/src/: lib.rs  main.rs  mod.rs
modules/coordination_module/fingerPrint/src/check/: check_hash.rs  mod.rs
modules/coordination_module/fingerPrint/src/create/: create_hash.rs  mod.rs
modules/coordination_module/fingerPrint/src/encoding/: encode.rs
modules/coordination_module/fingerPrint/src/insert/: insert_hash.rs  mod.rs
modules/coordination_module/json/: Cargo.toml
modules/coordination_module/json/json_objects/: json2.json  json3.json  json4.json  json5.json  json6.json
modules/coordination_module/json/load/: load.rs
modules/coordination_module/json/loader/: json_loader.rs
modules/coordination_module/json/src/: lib.rs  main.rs  mod.rs
modules/coordination_module/json/src/json_objects/: json1.json  json2.json  json3.json  json4.json  json5.json  json6.json
modules/coordination_module/json_comparator/: Cargo.toml  README.md
modules/coordination_module/json_comparator/comparator/: json_comparator.rs
modules/coordination_module/json_comparator/src/: lib.rs  main.rs  mod.rs
modules/coordination_module/json_comparator/src/data/: json_set.rs  mod.rs
modules/coordination_module/json_comparator/src/hash/: minhash_comparison.rs  mod.rs
modules/coordination_module/node_request/: Cargo.toml
modules/coordination_module/node_request/src/: lib.rs  mod.rs
modules/coordination_module/node_request/src/json_request/: mod.rs  node_request.rs
modules/coordination_module/src/: lib.rs  main.rs  mod.rs
modules/zk_module/: Cargo.toml
modules/zk_module/bellman/: Cargo.toml
modules/zk_module/bellman/src/: json_input.json  main.rs
modules/zk_module/circom/: Cargo.toml
modules/zk_module/circom/src/: lib.rs  main.rs  mod.rs
modules/zk_module/circom/src/proof/: proof.rs
modules/zk_module/circom/utils/: Verifier.sol  circuit.circom  circuit.r1cs  circuit.sym  circuit.wtns  circuit_0000.zkey  circuit_final.zkey  circuit_final_contrib.zkey  input.json  package-lock.json  package.json  pot12_0001.ptau  preprocess_input.js  preprocess_proof.js  proof.json  proof_generated.json  proof_process_gv.js  public.json  public_signals.json  verification_key.json  witness.wtns
modules/zk_module/circom/zk/: hardhat.config.js  package-lock.json  package.json  verifier.sol
modules/zk_module/create_proof/: Cargo.toml
modules/zk_module/data/: counterstrike-merkle.json  json_record.json  merkle_params.json
modules/zk_module/jolt_vf/: Cargo.toml.ex
modules/zk_module/jolt_vf/src/: lib.rs
modules/zk_module/lasso_jolt/: Cargo.toml  mod.rs
modules/zk_module/lasso_jolt/src/: lib.rs  main.rs
modules/zk_module/src/: lib.rs  main.rs  mod.rs
modules/zk_module/utils/: Cargo.toml
modules/zk_module/utils/data/: json_record.json
modules/zk_module/utils/src/: main.rs  mod.rs
modules/zk_module/verifier/: Cargo.toml
modules/zk_module/verifier/src/: lib.rs  mod.rs
modules/zk_module/verify_proof/: Cargo.toml
(+33 files in other folders)
