[package]
name = "coordination_module"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
colored = "2.0"
async-trait = "0.1"
json_comparator = { path = "json_comparator" }
fingerprint = { path = "fingerprint" }
json = { path = "json" }

