[package]
name = "json_comparator"
version = "0.1.0"
edition = "2021"

[lib]
name = "json_comparator"
path = "src/lib.rs"

[[bin]]
name = "json_comparator"
path = "src/main.rs"

[dependencies]
probabilistic-collections = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "1.9.3"