[package]
name = "lasso_jolt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ark-ff = "0.4.2"
rand = "0.8.5"
serde = "1.0.203"
futures = "0.3"
futures-util = "0.3"
halo2_proofs = {git = "https://github.com/zcash/halo2.git", rev = "a898d65ae3ad3d41987666f6a03cfc15edae01c4"}
halo2_gadgets = {git = "https://github.com/zcash/halo2.git", rev = "a898d65ae3ad3d41987666f6a03cfc15edae01c4"}
serde_json = "1.0.122"
chrono = "0.4.38"
ethereum-types = "0.14.1"
mongodb = { version = "3.0.1", features = ["sync"] }