[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "1.0"
anyhow = "1.0"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
lazy_static = "1.4.0"

[lib]
name = "verifier"
path = "src/lib.rs"